# TopoNetX

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  codecov.yml  conftest.py  pyproject.toml  requirements.txt  sample.ipynb  setup.cfg  setup.py
.github/workflows/: deploy.yml  docs.yml  lint.yml  test.yml
.spyproject/config/backups/: vcs.ini.bak  workspace.ini.bak
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_templates/: autosummary-module-template.rst
docs/api/: algorithms.rst  classes.rst  datasets.rst  generators.rst  index.rst  readwrite.rst  transform.rst
docs/contributing/: index.rst
docs/project/: code_of_conduct.rst  contributing.rst  index.rst
docs/tutorials/: index.rst
test/: test_tutorials.py
test/algorithms/: test_components.py  test_distance.py  test_distance_measures.py  test_exterior_calc.py  test_metric.py  test_spectrum.py
test/classes/: test_cell.py  test_cell_complex.py  test_colored_hypergraph.py  test_combinatorial_complex.py  test_complex.py  test_dynamic_combinatorial_complex.py  test_hyperedge.py  test_path.py  test_path_complex.py  test_reportviews.py  test_simplex.py  test_simplex_trie.py  test_simplicial_complex.py
test/datasets/: test_ahorn.py  test_benson.py  test_graph.py  test_mesh.py  test_mesh_datasets.py  test_utils.py
test/datasets/benson_sample_dataset/: benson_sample_dataset-nverts.txt  benson_sample_dataset-simplices.txt  benson_sample_dataset-times.txt
test/datasets/benson_sample_dataset-2/: hyperedges-benson_sample_dataset-2.txt  label-names-benson_sample_dataset-2.txt  node-labels-benson_sample_dataset-2.txt  node-names-benson_sample_dataset-2.txt
test/datasets/benson_sample_dataset-3/: label-names-benson_sample_dataset-3.txt  node-labels-benson_sample_dataset-3.txt
test/generators/: test_classic_cell_complex.py  test_random_cell_complexes - Copy.py  test_random_cell_complexes.py  test_random_combinatorial_complexes.py  test_random_simplicial_complexes.py
test/readwrite/: test_atomlist.py
test/structure/: test_structure.py
test/transform/: test_delaunay.py  test_graph_2_simplicial_complex.py  test_graph_to_cell_complex.py  test_graph_to_simplicial_complex.py
test/utils/: test_normalization.py  test_structure.py
tests/: test_tutorials.py
tests/classes/: test_abstract_cell.py  test_cell.py  test_cell_complex.py  test_combinatorial_complex.py  test_dynamic_combinatorial_complex.py  test_simplicial_complex.py  test_tutorials.py
tests/test_scripts/: test_tutorials.py
toponetx/: __init__.py  exception.py  read_write.py
toponetx/algorithms/: __init__.py  components.py  distance.py  distance_measures.py  eigen_align.py  spectrum.py
toponetx/algorithms/exterior_calculus/: __init__.py  exterior_calc.py  metric.py
toponetx/classes/: __init__.py  abstract_cell.py  cell.py  cell_complex.py  cellcomplex.py  colored_hypergraph.py  combinatorial_complex.py  combinatorialcomplex.py  complex.py  dynamic_cell.py  dynamic_combinatorial_complex.py  hyperedge.py  node.py  node_view.py  path.py  path_complex.py  ranked_entity.py  rankedentity.py  reportview.py  reportviews.py  simplex.py  simplex_trie.py  simplicial_complex.py  simplicialcomplex.py
toponetx/datasets/: .gitignore  __init__.py  ahorn.py  benson.py  coauthorship.npy  graph.py  mesh.py  mesh_datasets.py  utils.py
toponetx/embedding/: __init__.py  cell2vec.py  cell_diff2vec.py  deepcell.py  higher_order_ geometruc_laplacian_eigenmaps.py  higher_order_ laplacian_eigenmaps.py  random_walks.py
toponetx/generators/: __init__.py  classic_cell_complexes.py  random_cell_complex.py  random_cell_complexes.py  random_combinatorial_complexes.py  random_simplicial_complexes.py
toponetx/readwrite/: __init__.py  atomlist.py  serialization.py
toponetx/transform/: __init__.py  delaunay.py  graph_to_cell_complex.py  graph_to_simplicial_complex.py
toponetx/utils/: __init__.py  iterable.py  normalization.py  structure.py
tutorials/: 01_simplicial_complexes.ipynb  02_cell_complexes.ipynb  03_combinatorial_complexes.ipynb  04_colored_hypergraphs.ipynb  README.md  Simplicial Complex Tutorial.ipynb  discrete_exterior_calculus_tutorial.ipynb
